@@ -203,7 +203,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -296,7 +296,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -389,7 +389,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -482,7 +482,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -575,7 +575,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -668,7 +668,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -761,7 +761,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -854,7 +854,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -937,7 +937,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1030,7 +1030,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1123,7 +1123,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1216,7 +1216,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1309,7 +1309,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1402,7 +1402,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1495,7 +1495,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1588,7 +1588,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1681,7 +1681,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1774,7 +1774,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1857,7 +1857,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
@@ -1940,7 +1940,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: captcha loop when the service is under attack.<br />2. Fix: display BTC outgoing transactions.
+              1. Hotfix: Addressed captcha loop during service attack<br />2. Fixed: Wallet displaying zero balance<br />3. Fixed: Calculated price update in ad formula when switching<br />4. Added: Settlement proof button to completed trades<br />5. Added: Proxy setting before login<br />6. Enhanced: Wallet tiles can be minimized for compact view
           </div>
         
 
